--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "rollup": "^2.79.0",
     "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-esbuild": "^4.10.1",
+    "rollup-plugin-uglify": "^6.0.4",
     "tslib": "^2.4.0",
     "typescript": "^4.6.3"
   }
